base/bookmark-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmark-api
  namespace: bookmark
  labels:
    app: bookmark-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookmark-api
  template:
    metadata:
      labels:
        app: bookmark-api
    spec:
      containers:
        - name: bookmark-api
          image: ghcr.io/l2klbs/bookmark-api:TAG
          ports:
            - containerPort: 8000
