base/bookmark-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookmark-api
  namespace: bookmark
spec:
  selector:
    app: bookmark-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
